# jardinii

./: .gitignore  .gitmodules  Cargo.toml  Makefile  README.md  Shakefile.hs  crossShell.nix  x86_64-unknown-linux-gnu.json
.cargo/: config
boot/: boot.asm  grub.cfg  long_mode_init.asm
init/: Cargo.toml
init/src/: lib.rs
src/: lib.rs
src/interrupts/: mod.rs
src/vga/: mod.rs
