[package]
name = "jardinii"
version = "0.0.1"
authors = ["Isitha Subasinghe"]

[lib]
crate-type = ["staticlib"]

[dependencies]
spin = "0.9.2"
x86_64 = "0.14.9"
bitflags = "1.3.2"
volatile = "0.1.0"
multiboot2 = "0.13.2"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"
lto=false

[profile.release]
panic = "abort"
lto=false

