[package]
name = "jardinii"
version = "0.0.1"
authors = ["Isitha Subasinghe"]

[lib]
crate-type = ["staticlib"]

[dependencies]
bitflags = "1.3.2"
multiboot2 = "0.13.2"
volatile = "0.2.6"
spin = "0.5.2"
x86_64 = "0.14.2"
uart_16550 = "0.2.0"
pic8259 = "0.10.1"
pc-keyboard = "0.5.0"

[dependencies.lazy_static]
version = "1.4.0"
features = ["spin_no_std"]

[profile.dev]
panic = "abort"
lto=false

[profile.release]
panic = "abort"
lto=false

